# jsnake

./: .coveragerc  README.md  env_vars  pyproject.toml  pytest.ini  todo.org
docs/source/: api.rst  conf.py  index.rst
src/jsnake/: __init__.py  errors.py  logging.py  logging.pyi  signals.py  signals.pyi  utils.py  utils.pyi
src/jsnake/interface/: __init__.py  __init__.pyi  console.py  dialog.py  dialog.pyi  entry.py  listbox.py  menubutton.py  spinbox.py  test_listbox.py  text.py  types.py  utils.pyi  widgets.py
src/jsnake/interface/_images/: __init__.py  data.py
src/jsnake/tests/: _500_random_words.pickle  test_signals.py  test_utils.py
src/snek/: logging.py  utils.py
