[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "snek"
dynamic = ["version"]
description = "General Python utilities"
requires-python = ">=3.10"
license.file = "LICENSE"
authors = [
    { name = "John Russell", email = "johndevlopment7@gmail.com" }
]
classifiers = []

# [project.optional-dependencies]
# test = ["pytest", "pytest-cov"]

[tool.flit.module]
name = "snek"
