[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "jsnake"
dynamic = ["version"]
description = "Boost-like Python package"
readme = "README.md"
requires-python = ">=3.9"
license.file = "LICENSE"
authors = [
    { name = "John Russell", email = "johndevlopment7@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = ["typing_extensions"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["Sphinx>=6.2.1", "sphinx-rtd-theme>=1.2.2"]

[tool.flit.module]
name = "jsnake"
